--- a/styles.css
+++ b/styles.css
@@ -33,4 +33,25 @@ h1 {
 img {
   max-width: 100%;
   height: auto;
+  border-radius: 50%;
+}
+
+footer {
+  text-align: center;
+  font-style: oblique;
+  color: rgb(35, 209, 151);
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgb(172, 109, 27);
+}
+
+a {
+  text-decoration: none;
+  color: yellow;
+}
+
+a:hover {
+  color: red;
 }
